# UAVProjectileCatcher

src/drone_ball_catcher/: CMakeLists.txt  package.xml
src/drone_ball_catcher/launch/: ball_rosbag.launch  drone_test_AB_rosbag.launch  drone_test_C_rosbag.launch  drone_test_DE_rosbag.launch
src/drone_ball_catcher/src/: ball_locator.cpp  ball_pose_from_bag.cpp  ball_tf.cpp  ball_trajectory.cpp  drone_test_no_yaw.cpp  drone_test_yaw.cpp  drone_test_yaw_predict.cpp  drone_tests.cpp  gazebo_models_sub.cpp
